agregamos botones y paginas

--- a/sales.html
+++ b/sales.html
@@ -4,17 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fritos</title>
     <link rel="stylesheet" href="/styles/mainstyles.css">
+    <title>Ventas</title>
 </head>
 <body>
     <main>
         <section>  
             <h1>Venta de fritos</h1>
-            <a href="/sales.html"><div><p>Ventas</p></div></a>
-            <a href=""><div><p>Modificar precios</p></div></a>
-            <a href=""><div><p>Salir</p></div></a>
+                <div>Arepa de Huevo</div>
+                <div>Empanada</div>
+                <div>Papa</div>
+                <div>Bofe</div>
+                <div>Carimañola</div>
+                <div>Jugo</div>
+                <a href="/index.html"><div>Volver</div></a>
         </section>
     </main>
+    
 </body>
 </html>
