se empieza a modificar el archivo de modificar precios

--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
         <section>  
             <h1>Venta de fritos</h1>
             <a href="/sales.html"><div><p>Ventas</p></div></a>
-            <a href=""><div><p>Modificar precios</p></div></a>
-            <a href=""><div><p>Salir</p></div></a>
+            <a href="/modPrices.html"><div><p>Modificar precios</p></div></a>
+            <div onclick="crear()"><p>Salir</p></div>
         </section>
+        <section id="pruebas">
+
+        </section>
+        
     </main>
+    <script src="/js/pruebas.js"></script>
 </body>
 </html>
